--- a/MvcPlayground/Views/Home/Index.cshtml
+++ b/MvcPlayground/Views/Home/Index.cshtml
@@ -29,15 +29,16 @@
 
             </div>
         </div>
-        <hr/>
-
         <div class="row">
             <h1> Useful Docs </h1>
             <h3>
                 <a href="https://datatables.net/manual/server-side"  target="_blank"> Documentation for Server Side control over this DataTable</a>
             </h3>
             <h3>
-                <a href="https://www.gyrocode.com/articles/jquery-datatables-checkboxes/"  target="_blank"> Using Row Callbacks</a>
+                <a href="https://www.gyrocode.com/articles/jquery-datatables-checkboxes/" target="_blank"> Using Row Callbacks</a>
+            </h3>
+            <h3>
+                <a href="https://datatables.net/reference/option/drawCallback" target="_blank"> Create custom design and functionality with drawCallback</a>
             </h3>
         </div>
     </div>
