--- a/MvcPlayground/Views/Home/Index.cshtml
+++ b/MvcPlayground/Views/Home/Index.cshtml
@@ -2,9 +2,8 @@
 @section head{
 <link rel="stylesheet" type="text/css" href="~/css/vuetiful.css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/components/form.css"/>
-<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.16/css/dataTables.semanticui.css" />
 <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.css"> 
-
+ <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 }
 
 
@@ -18,15 +17,24 @@
             <div class="datatable">
                     <div class="row">
                             <button type="button" data-toggle="modal" data-target="#rowForm" class="btn btn-success pull-left"> Add new Row </button>
-                            <button type="button" class="btn btn-danger pull-right">Delete Selected </button>
-                        </div>
-                </div>
+                            <button type="button" class="btn btn-warning pull-right" v-on:click="editChecked()">Edit Selected </button>
+                     </div>
+            </div>
                 <br/>
-                <div class="row">
-                    <table id="table" class="datatable-columns" cellspacing="0" width="100%">
-                    </table>
-                </div>
+            <div class="row">
+                <table id="table" class="datatable-columns" cellspacing="0" width="100%">
+                </table>
+            </div>
 
+            <div style="display:none;" id="editModal" title="Edit Selected Rows">
+                 <form class="ui form">
+                    <div class="field">
+                        <label> Selected Rows </label>
+                        <table id="editTable" class="display" width="100%">
+                        </table>
+                    </div>
+                    <button type="button" class="ui button" v-on:click="applyEdits"> Apply Edits </button>
+                </form>
             </div>
         </div>
         <div class="row">
@@ -42,10 +50,11 @@
             </h3>
         </div>
     </div>
-</div>
+ </div>
 
 @section scripts{
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/components/form.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.25.0/ramda.min.js"></script>
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
