--- a/MvcPlayground/Views/Home/Index.cshtml
+++ b/MvcPlayground/Views/Home/Index.cshtml
@@ -14,12 +14,14 @@
         </div>
         <br/>
         <div class="row">
+            <div class="col-lg-12">
             <div class="datatable">
                     <div class="row">
                             <button type="button" data-toggle="modal" data-target="#rowForm" class="btn btn-success pull-left"> Add new Row </button>
                             <button type="button" class="btn btn-warning pull-right" v-on:click="editChecked()">Edit Selected </button>
                      </div>
             </div>
+               
                 <br/>
             <div class="row">
                 <table id="table" class="datatable-columns" cellspacing="0" width="100%">
@@ -35,8 +37,43 @@
                     </div>
                     <button type="button" class="ui button" v-on:click="applyEdits"> Apply Edits </button>
                 </form>
+
+                    </div>
+        </div>
+        <br/>
+        <hr/>
+        <div class="row">
+            <div class="col-lg-12">
+            <h1>
+                V-For Table with cyclic Arrays 
+            </h1>
+          
+                <table>
+                    <tbody>
+                        <tr v-for="data in firstN" track-by="$index">
+                            <td>{{ data.name }}</td>
+                            <td>{{ data.last }}</td>  
+                            <td>{{ data.title }}</td>
+                            <td>{{ data.location }}</td>
+                            <td>{{ data.date }}</td>
+                            <td>{{ data.salary }}</td>                                    
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="3" align="center">
+                                <button v-on:click="prev()">Prev</button>
+                            </td>
+                       
+                            <td colspan="3" align="center">                         
+                                <button v-on:click="next()"> Next </button>                            
+                            </td>                       
+                        </tr>
+                    </tfoot>
+                </table>
             </div>
         </div>
+        <br/>
         <div class="row">
             <h1> Useful Docs </h1>
             <h3>
